frontend/test/should_pass/deleteInOptional_e.grg
rule r
{
	-e:Edge->;

	optional {
	
		modify {
			delete(e);
		}
	}
	
	modify {
	}
}
