frontend/test/should_fail/basic_012.grg
rule r(-e:Edge->) {
  replace {
    . -e:Edge-> .;
  }
}
